# openskills

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
lib/: CMakeLists.txt
lib/src/: Local.mk
lib/src/address/: Local.mk  at_address.c  test_address.c
lib/src/aes/: Local.mk  at_aes_base_aesni.S  at_aes_base_ref.c  at_aes_gcm_avx10.S  at_aes_gcm_ref.c  at_aes_gcm_ref_ghash.c  at_aes_gcm_x86.c
lib/src/base58/: Local.mk  at_base58.c  at_base58_avx.h  at_base58_tmpl.c  test_base58_simd.c
lib/src/base64/: Local.mk  at_base64.c
lib/src/bech32/: Local.mk  test_bech32.c
lib/src/blake2b/: Local.mk  at_blake2b.c
lib/src/blake3/: Local.mk  at_blake3.c  at_blake3_avx2.c  at_blake3_avx512.c  at_blake3_ref.c  at_blake3_sse41.c  test_blake3_simd.c
lib/src/bls/: Local.mk  at_bls12_381.c
lib/src/bn254/: Local.mk  at_bn254.c  at_bn254_field.c  at_bn254_field_ext.c  at_bn254_g1.c  at_bn254_g2.c  at_bn254_pairing.c  at_poseidon.c  at_poseidon_params.c
lib/src/chacha/: Local.mk  at_chacha_rng.c  at_chacha_rng_avx.c  at_chacha_rng_avx512.c  at_chacha_sse.c  test_chacha20_simd.c
lib/src/chacha20_poly1305/: Local.mk
lib/src/fiat-crypto/: curve25519_32.c  curve25519x6_64.c  secp256k1_dettman_64.c  secp256k1_montgomery_64.c  secp256k1_montgomery_scalar_64.c
lib/src/hmac/: Local.mk  at_hmac.c
lib/src/json/: Local.mk  cJSON.c  cJSON_alloc.c
lib/src/keccak256/: Local.mk  at_keccak256.c  at_keccak256_batch_avx2.c  at_keccak256_batch_avx512.c  test_keccak256_simd.c
lib/src/merlin/: Local.mk  test_merlin.c
lib/src/murmur3/: Local.mk  at_murmur3.c
lib/src/poly1305/: Local.mk
lib/src/rangeproofs/: Local.mk  at_rangeproofs_table_avx512.c  at_rangeproofs_table_ref.c
lib/src/ripemd160/: Local.mk  at_ripemd160.c
lib/src/schnorr/: Local.mk  test_schnorr.c
lib/src/secp256k1/: Local.mk  at_secp256k1.c
lib/src/vrf/: Local.mk  (+1 more)
native/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
native/src/: lib.rs
(+139 files in other folders)
