[package]
name = "openskills-zktls"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TLSNotary zk-TLS prover and verifier as a Node.js native module via napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs bindings
napi = { version = "2", default-features = false, features = ["napi8", "async", "serde", "tokio_rt"] }
napi-derive = "2"

# TLSNotary — use git rev matching the v0.1.0-alpha.14 tag
tlsn = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14", features = ["mozilla-certs"] }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14" }

# HTTP client (must match versions used by tlsn workspace)
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
rangeset = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Networking
tokio-util = { version = "0.7", features = ["compat"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
